new version view from. change style. fixes.